# hex-single-motor-mini-drive

./: .gitignore  Hex logo midline.dxf  Hex logo.dxf  readme.md
circuits/: components_schematics.bak  components_schematics.kicad_sym  fp-info-cache  hex-mini-drive.kicad_pcb  hex-mini-drive.kicad_prl  hex-mini-drive.kicad_pro  hex-mini-drive.kicad_sch  hex-mini-drive.kicad_sch-bak  readme.md  sym-lib-table
circuits-v0.1/: fp-lib-table  hex-mini-drive.kicad_pcb  hex-mini-drive.kicad_pro
circuits-v0.2/: #auto_saved_files#  Library.bak  Library.kicad_sym  hex-minidrive.kicad_pcb  hex-minidrive.kicad_prl  hex-minidrive.kicad_pro  hex-minidrive.kicad_sch  readme.md
circuits-v0.3/: .gitignore  Library.bak  Library.kicad_sym  hex-minidrive.kicad_pcb  hex-minidrive.kicad_prl  hex-minidrive.kicad_pro  hex-minidrive.kicad_sch  sym-lib-table  ~hex-minidrive.kicad_pcb.lck
circuits-v0.4/: .gitignore  hex-minidrive.kicad_pcb  hex-minidrive.kicad_prl  hex-minidrive.kicad_pro  hex-minidrive.kicad_sch
driver-code/: .cproject  .gitignore  .mxproject  .project  .project.bak  CMakeLists.txt  CMakePresets.json  STM32F103C8TX_FLASH.ld  readme.md  (+4 more)
driver-code-v0.2/: .mxproject  CMakeLists.txt  hex-mini-drive.ioc  readme.md  stm32g431rbtx_flash.ld
driver-code-v0.3/: .mxproject  CMakeLists.txt  hex-mini-drive.ioc
driver-code-v0.4/: .mxproject  CMakeLists.txt  hex-mini-drive.ioc  readme.md
master-code/src/: CMakeLists.txt  display.cpp  https_server.cpp  https_server.hpp  idf_component.yml  io.cpp  main.cpp  wifi.cpp
master-code/src/certs/: cacert.pem  prvtkey.pem  readme.md
(+417 files in other folders)
